--- a/src/components/SideBar/sidebar.css
+++ b/src/components/SideBar/sidebar.css
@@ -4,6 +4,7 @@ left: 0;
 height: 100vh;
 background-color: #f2f2f2;
 background: #f2f2f2;
+position: fixed;
 }
 
 .sidebar.open {
