--- a/src/components/TimerInput/timerInput.css
+++ b/src/components/TimerInput/timerInput.css
@@ -17,4 +17,6 @@
     color: #828282;
     margin-top: 32px;
     margin-bottom: 28px;
+    width: max-content;
+    min-width: -webkit-fill-available;
   }
